[package]
name = "pumpkin-amm-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-sdk = "2.0.0"
anyhow = "1.0.86"
#jupiter-amm-interface = { git = "https://github.com/jup-ag/jupiter-amm-interface.git", rev = "662097e2cf205f0ea2ff9543f0adbfba61ba415d" }
jupiter-amm-interface = { path = "./jupiter-amm-interface" }